--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=rLghw8YwlJl7jaUu07wnMtqG6FLIYnDj
 
 DB_HOST=localhost
-DB_DATABASE=tutolaravel2
+DB_DATABASE=gest_agenda
 DB_USERNAME=root
 DB_PASSWORD=
 
